Build corrections for ENABLE_FILTERS in Windows. https://bugs.webkit.org/show_bug.cgi?id=30797

Reviewed by Darin Adler.

Build correction for ENABLE_FILTERS feature.  No new tests needed.

* platform/graphics/filters/FEColorMatrix.cpp: Use MathExtras.h and
  its piDouble constant.
* platform/graphics/filters/FEGaussianBlur.cpp: Use MathExtras.h and
  its piDouble constant.  Remove unnecessary call to floor used in
  the division of an unsigned, converting to int.
* platform/graphics/win/SimpleFontDataCairoWin.cpp: Correct include
  style for MathExtras.h.



git-svn-id: svn://svn.chromium.org/blink/trunk@50118 bbb929c8-8fbe-4397-9dbb-9b2b20218538