third_party/WebKit/WebCore/platform/graphics/win/SimpleFontDataCairoWin.cpp
@@ -35,11 +35,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Font.h"
 #include "FontCache.h"
 #include "FontDescription.h"
-#include "MathExtras.h"
 #include <cairo.h>
 #include <cairo-win32.h>
 #include <mlang.h>
 #include <tchar.h>
+#include <wtf/MathExtras.h>
 
 namespace WebCore {
 
